# aoc2020

./: .gitignore
Day01/: CMakeLists.txt  main.cpp
Day02/: CMakeLists.txt  main.cpp
Day03/: CMakeLists.txt  main.cpp
Day04/: CMakeLists.txt  main.cpp
Day05/: main.cpp
Day06/: main.cpp
Day07/: input  main.cpp
Day08/: main.cpp
Day09/: main.cpp
Day10/: CMakeLists.txt  main.cpp
Day11/: CMakeLists.txt  main.cpp
Day12/: CMakeLists.txt  main.cpp
init/: CMakeLists.txt  Makefile  main.cpp  value.cpp  value.hpp
